fix li spacing to match paragraph copy

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ Tags: blue, gray, orange, pink, purple, dark, light, two-columns, right-sidebar,
 
 .clear {clear:both;}
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {background: transparent;border: 0;margin: 0;padding: 0;vertical-align: baseline;}
-body { color: #777777;  background-color: #fff; font-family: 'OpenSansRegular';  font-size: 14px;  line-height: 175%; font-weight:300;}
+body { color: #777777;  background-color: #fff; font-family: 'OpenSansRegular';  font-size: 14px;  line-height: 148%; font-weight:300;}
 p, dl, hr, h1, h2, h3, h4, h5, h6, ol, ul, pre, table, address, fieldset, figure {font-weight: 300;  margin-bottom: 20px;  line-height: 175%;}
 h1, h2, h3, h4, h5, h6{ color: #555555;font-family: 'OpenSansSemiBold';font-weight: normal;letter-spacing: -0.5px;}
 pre {  overflow: auto;  width: 98%;}
@@ -201,10 +201,11 @@ body.page-template-template-front-page-php #main{margin-top:0 !important;}
     font-size: 22px;
     margin-bottom: 10px; }
 #content .skepost h3 { margin: 0 0 5px; font-size: 18px; }
-#content .skepost, #content .skepost p {     font-size: 14px;
+#content .skepost, #content .skepost p {     
+    font-size: 14px;
     line-height: 20px;
     margin: 0 0 10px 0; } 
-
+#content .skepost li { margin-bottom: .8em; line-height: 148%; }
 
 
 body.page .edit-link {  clear: both;  display: block;  } 
